Change lighttpd upload dir to /mnt to handle large files
Signed-off-by: Maxim Osipov <maxim.osipov@gmail.com>

--- a/lighttpd-flexibity/files/lighttpd.conf
+++ b/lighttpd-flexibity/files/lighttpd.conf
@@ -122,7 +122,7 @@ server.pid-file = "/var/run/lighttpd.pid"
 ## change uid to <uid> (default: don't care)
 #server.username = "nobody"
 #
-server.upload-dirs = ( "/tmp" )
+server.upload-dirs = ( "/mnt" )
 
 ## change uid to <uid> (default: don't care)
 #server.groupname = "nobody"
