--- a/flexibity/Makefile
+++ b/flexibity/Makefile
@@ -32,11 +32,13 @@ endef
 define Build/Prepare
 	mkdir -p $(PKG_BUILD_DIR)
 	$(CP) ./files/tunslip6.c $(PKG_BUILD_DIR)/tunslip6.c
+	$(CP) ./files/tunslip.c $(PKG_BUILD_DIR)/tunslip.c
 	$(CP) ./files/bbmc.c $(PKG_BUILD_DIR)/bbmc.c
 	$(CP) ./files/mc1322x-load.c $(PKG_BUILD_DIR)/mc1322x-load.c
 endef
 
 define Build/Compile
+	$(TARGET_CC) $(TARGET_CFLAGS) $(TARGET_CPPFLAGS) $(TARGET_LDFLAGS) -o $(PKG_BUILD_DIR)/tunslip $(PKG_BUILD_DIR)/tunslip.c
 	$(TARGET_CC) $(TARGET_CFLAGS) $(TARGET_CPPFLAGS) $(TARGET_LDFLAGS) -o $(PKG_BUILD_DIR)/tunslip6 $(PKG_BUILD_DIR)/tunslip6.c
 	$(TARGET_CC) $(TARGET_CFLAGS) $(TARGET_CPPFLAGS) $(TARGET_LDFLAGS) -lftdi -lusb -o $(PKG_BUILD_DIR)/mc1322x-ctl $(PKG_BUILD_DIR)/bbmc.c
 	$(TARGET_CC) $(TARGET_CFLAGS) $(TARGET_CPPFLAGS) $(TARGET_LDFLAGS) -o $(PKG_BUILD_DIR)/mc1322x-load $(PKG_BUILD_DIR)/mc1322x-load.c
@@ -46,13 +48,13 @@ define Package/flexibity/install
 	$(INSTALL_DIR) $(1)/etc/config
 	$(INSTALL_CONF) files/sensors.config $(1)/etc/config/sensors
 	$(INSTALL_DIR) $(1)/etc/init.d
+	$(INSTALL_BIN) ./files/tunslip.init $(1)/etc/init.d/tunslip
 	$(INSTALL_BIN) ./files/tunslip6.init $(1)/etc/init.d/tunslip6
 	$(INSTALL_DIR) $(1)/usr/bin
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/tunslip $(1)/usr/bin/
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/tunslip6 $(1)/usr/bin/
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/mc1322x-ctl $(1)/usr/bin/
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/mc1322x-load $(1)/usr/bin/
-	$(INSTALL_BIN) files/mc1322x-reset.sh $(1)/usr/bin/
-	$(INSTALL_BIN) files/mc1322x-erase.sh $(1)/usr/bin/
 	$(INSTALL_DIR) $(1)/usr/lib/firmware
 	$(INSTALL_DIR) $(1)/usr/lib/firmware/sensors
 	$(INSTALL_BIN) files/border-router.bin $(1)/usr/lib/firmware/sensors/
@@ -65,11 +67,13 @@ define Package/flexibity/postinst
 uci set network.wpan0=interface
 uci set network.wpan0.type=static
 uci set network.wpan0.ip6addr=aaaa::/1
+uci set network.wpan0.ipaddr=192.168.119.1
 uci set network.wpan0.device=/dev/ttyUSB0
 uci commit network
 # check if we are on real system
 if [ -z "$${IPKG_INSTROOT}" ]; then
 	echo "Enabling rc.d symlink for tunslip6"
+	/etc/init.d/tunslip enable
 	/etc/init.d/tunslip6 enable
 fi
 exit 0
@@ -80,6 +84,7 @@ define Package/flexibity/prerm
 # check if we are on real system
 if [ -z "$${IPKG_INSTROOT}" ]; then
 	echo "Removing rc.d symlink for tunslip6"
+	/etc/init.d/tunslip disable
 	/etc/init.d/tunslip6 disable
 fi
 exit 0
