flexibity: Preliminary config for data piping
Signed-off-by: Maxim Osipov <maxim.osipov@gmail.com>

--- a/flexibity/Makefile
+++ b/flexibity/Makefile
@@ -65,6 +65,18 @@ uci commit network
 # add /etc/config.sensors entries
 uci set sensors.router=router
 uci set sensors.router.ip6addr=aaaa::1/64
+uci set sensors.cosm=server
+uci set sensors.cosm.enabled=0
+uci set sensors.cosm.host=api.cosm.com
+uci set sensors.cosm.port=80
+uci set sensors.cosm.path=/v2/feeds
+uci set sensors.cosm.appdata=
+uci set sensors.cosm.interval=30
+uci set sensors.cosm.proto=cosm
+uci set sensors.sensor1=sensor
+uci set sensors.sensor1.id=YOUR_FEED_ID
+uci set sensors.sensor2=sensor
+uci set sensors.sensor2.id=YOUR_FEED_ID
 uci commit sensors
 # check if we are on real system
 if [ -z "$${IPKG_INSTROOT}" ]; then
